--- a/content/blog/i-have-built-a-serverless-search-for-my-blog-here-is-how.asciidoc
+++ b/content/blog/i-have-built-a-serverless-search-for-my-blog-here-is-how.asciidoc
@@ -651,3 +651,4 @@ In the meantime, you can find the https://github.com/gunnarmorling/search.morlin
 _Many thanks to https://twitter.com/hpgrahsl[Hans-Peter Grahsl] for his feedback while writing this post!_
 
 TODO: Note on RAM / Siege with 512 MB
+No spend capping, no quota for cors preflight
