Post on class unloading (adding link to Shenandoah post)

--- a/content/blog/class-unloading-in-layered-java-applications.asciidoc
+++ b/content/blog/class-unloading-in-layered-java-applications.asciidoc
@@ -278,6 +278,7 @@ helping to ensure class unloading in your layered applications is done correctly
 
 Here are some more resources about class unloading and analysing class loader leaks:
 
+* https://developers.redhat.com/blog/2020/03/09/shenandoah-gc-in-jdk-14-part-2-concurrent-roots-and-class-unloading/[Shenandoah GC in JDK 14, Part 2: Concurrent roots and class unloading]: A blog post touching on class unloading in Shenandoah by Roman Kennke
 * http://cr.openjdk.java.net/~pliden/slides/ZGC-Jfokus-2019.pdf[ZGC Concurrent Class Unloading]: A conference talk by Erik Österlund
 * https://java.jiderhamn.se/category/classloader-leaks/[class loader leaks]: A series of blog posts by Mattias Jiderhamn
 * https://blog.creekorful.com/2020/03/classloader-and-memory-leaks/[ClassLoader & memory leaks: a Java love story]: A post about heap dump analysis by Aloïs Micard
