--- a/content/conferences/index.asciidoc
+++ b/content/conferences/index.asciidoc
@@ -12,6 +12,8 @@ If you'd like me to have as a speaker at your conference or meet-up, please get 
 
 == 2020
 
+* JokerConf (online): https://jokerconf.com/en/2020/talks/4ycp4y8xshqmlt0kbpacwv/[Change data capture pipelines with Debezium and Kafka Streams]
+* QConPlus (online): https://plus.qconferences.com/plus2020/presentation/serverless-search-my-blog-java-quarkus-aws-lambda[Serverless Search for My Blog With Java, Quarkus, & AWS Lambda]
 * JFall (joint presentation with Andres Almiray; online): https://jfall.nl/sessions/plug-in-architectures-for-java-with-layrry-and-the-java-module-system/[Plug-in Architectures for Java With Layrry and the Java Module System]
 * Java Day Istanbul (online): Change Data Streaming Use Cases With Apache Kafka & Debezium
 * Great International Developer Summit (online): https://wurreka.com/ict/virtual-conference/java/session/change-data-capture-pipelines-with-debezium-and-kafka-streams[Change Data Capture Pipelines with Debezium and Kafka Streams]
